@@ -1,3 +1,9 @@
+2002-10-11  Michel Six  <msix@ccr.jussieu.fr>
+	    Alan Modra  <amodra@bigpond.net.au>
+
+	* config/tc-i386.c (output_jump): Set fx_signed for loop/jcxz.
+	(md_estimate_size_before_relax): Likewise for 8 bit branches.
+
 2002-09-24  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/tc-i386.c (process_operands): Warn about "lea" segment
